tests/neg/semantic_free_bad_type.baa
// EXPECT: نوع المعامل 1 في 'حرر_نص' غير متوافق

صحيح الرئيسية() {
    حرر_نص(١).
    إرجع ٠.
}

